# Chess-Engine

./: .gitignore  LICENSE  README.md  board.py  gui.py  movegen.py  play.py  pyproject.toml
logic/: atktbls.py  movegen.py  moves.py
