[Build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "0.1.0"
name = "Chess Engine"
description = "Home built chess engine and ML chess engine. WIP passion project to learn more python."
readme = "README.md"
authors = [{name = "Grant Sooy", email = "gmsooy@cdsdesign.net"}]
maintainers = [{name = "Grant Sooy", email = "gmsooy@cdsdesign.net"}]
requires-python = ">=3.14.6"
dependencies = [
    "pygame-ce",
    
    ]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py314"
exclude = [
    ".ruff_cache",
    ".venv",
    ".vscode",
    "assets",
    "docs",
    "git-hooks",
]

[tool.ruff.lint]

select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]

ignore = [
    "B008",
    "C901",
    "E501",
]

per-file-ignores = {"**/__init__.py" = ["I001", "I002"]}

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
